--- a/client/donate/donate/src/components/style.css
+++ b/client/donate/donate/src/components/style.css
@@ -34,6 +34,15 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     min-height: 100%;
     background-color: #fff;
 }
+.WXDescrible {
+    padding:0 0.25rem;
+    height: 100%;
+    line-height: 0.78rem;
+    text-align: center;
+    font-size: 0.28rem;
+    color: #2c3e50;
+    border-radius: 4px;
+}
 .WXbody{
     padding:0 0.25rem;
 }
@@ -42,7 +51,7 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     background-color: #eab90d;
     border-radius: 4px;
     box-shadow: 0 0 5px #eab90d;
-    margin:0.35rem 0;
+    margin:0.1rem 0 0.35rem 0;
 }
 .WXtitlis{
     float: left;
@@ -53,10 +62,13 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     font-size: 0.28rem;
     color: #fff;
 }
-.WXCon{
+#WXCon{
+    height: 6rem;
     border-radius: 4px;
     box-shadow: 0 0 5px #ccc;
     padding:0.16rem 0;
+    overflow: hidden;
+    display: block;
 }
 .wxcontact-con img,.wxcontact-con table{
 	max-width:100%;
