--- a/client/code/donate/src/components/style.css
+++ b/client/code/donate/src/components/style.css
@@ -81,7 +81,7 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     text-align: center;
 }
 .strengthen{
-    color: red;
+    font-weight: bold;
 }
 
 .centerView3{
