--- a/client/code/donatenc/src/components/style.css
+++ b/client/code/donatenc/src/components/style.css
@@ -258,3 +258,15 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     font-size: 0.24rem;
     color: red;
 }
+
+.power {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    font-size: 0.24rem;
+}
+
+.power > a {
+    color: red;
+}
