--- a/client/code/donate/src/components/style.css
+++ b/client/code/donate/src/components/style.css
@@ -62,7 +62,7 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
     color: #fff;
 }
 #WXCon{
-    height: 6rem;
+    height: 5rem;
     border-radius: 4px;
     box-shadow: 0 0 5px #ccc;
     padding:0.16rem 0;
@@ -256,5 +256,17 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
 
 .net_error p {
     font-size: 0.24rem;
+    color: red;
+}
+
+.power {
+    position: relative;
+    margin-top: 0.2rem;
+    text-align: center;
+    width: 100%;
+    font-size: 0.24rem;
+}
+
+.power > a {
     color: red;
 }
