--- a/client/code/donatenc/src/components/style.css
+++ b/client/code/donatenc/src/components/style.css
@@ -21,7 +21,7 @@ html, body {position: relative;height: 100%;color: #333;background-color: #f5f5f
 
 .WXtop{
     height: 3.5rem;
-    background: url("http://pb0geuvxr.bkt.clouddn.com/mp/xyhweb/donation/wxtop.png") no-repeat center center;
+    background: url("http://qn.jcbjxyh.cn/mp/xyhweb/donation/wxtop.png") no-repeat center center;
     background-size: cover;
     text-align: center;
 }
